update workflow file

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -28,5 +28,5 @@ jobs:
       - name: Upload Build
         uses: actions/upload-artifact@v3
         with:
-          name: Grasscutter
+          name: Jinx
           path: grasscutter-*.jar
